--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 /*cuando baje la pagina se mantiene la barra*/
 header {
-  background: rgba(116, 140, 171);
+  background: rgba(142, 202, 230);
   width: 100%;
   position: fixed;
   z-index: 100;
@@ -31,12 +31,12 @@ nav ul li a {
 }
 
 nav ul li:hover {
-  background: #1D2D44;
+  background: #25AED0;
 }
 
 /*aca termina la configuracion visual de la barra */
 .titulo {
-  background-color: #3E5C76;
+  background-color: #C09614;
   width: 100%;
   height: 150px;
 }
@@ -53,9 +53,9 @@ h1 {
 .finpagina {
   position: sticky;
   top: 0;
-  background-color: rgba(62, 92, 118);
+  background-color: rgba(219, 63, 48);
   width: 100%;
-  padding: 40px 20px;
+  padding: 30px 20px;
   height: 100px;
 }
 
