--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,23 @@ h1 {
   background-color: #FFFDD0;
   padding: 5%;
 }
+.izquierda {
+  width: 20%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #f1f1f1;
+}
+
+.centro {
+  width: 80%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .alineacion{
   overflow: auto;
 }
