--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,30 +57,18 @@ nav ul li:hover {
   width: 100%;
   height: 150px;
 }
-
+.izquierda {
+  min-width: 200px;
+  background-color: azure;
+  padding: 10px 5px;
+}
 h1 {
   padding-top: 60px;
 }
 
 .cuerpo {
   background-color: #FFFDD0;
-  padding: 5%;
-}
-.izquierda {
-  width: 10%;
-  height: 80%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #f1f1f1;
-}
-
-.centro {
-  width: 90%;
-  height: 80%;
-  position: absolute;
-  top: 0;
-  right: 0;
+  margin-left: 20px;
 }
 
 .alineacion{
