--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,8 +71,8 @@ h1 {
 }
 
 .cuerpoForm{
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .alineacion{
@@ -86,7 +86,7 @@ h1 {
 }/*display: inline-block;*/
   /*vertical-align: top;*/
 .finpagina {
-  position: fixed;
+  /*position: fixed;*/
   bottom: 0;
   width: 100%;
   height: 60px;
