--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,8 @@ header {
   z-index: 100;
   /*cuando baje la pagina se mantiene la barra*/
 }
-.menu{
+
+.menu {
   background: rgba(142, 202, 230);
 }
 
@@ -51,17 +52,21 @@ nav ul li:hover {
   transform: translateY(-50%);
 }
 
-/*aca termina la configuracion visual de la barra */
 .titulo {
   background-color: #C09614;
   width: 100%;
   height: 120px;
 }
+
 .izquierda {
-  
-  background-color: azure;
-  
-}/*padding: 10px 5px;*//*min-width: 200px;*/
+  box-sizing: content-box;
+  display: block;
+  float: none;
+  line-height: 14px;
+  position: fixed;
+  z-index: 999999;
+}
+
 h1 {
   padding-top: 60px;
 }
@@ -70,21 +75,27 @@ h1 {
   background-color: #FFFDD0;
 }
 
-.cuerpoForm{
+.cuerpoHome {
+  margin-left: 130px;
+}
+
+.cuerpoForm {
   margin-left: 40px;
   margin-right: 40px;
 }
 
-.alineacion{
+.alineacion {
   overflow: auto;
 }
 
 .texto {
   margin-left: 170px;
   text-align: right;
-  
-}/*display: inline-block;*/
-  /*vertical-align: top;*/
+
+}
+
+/*display: inline-block;*/
+/*vertical-align: top;*/
 .finpagina {
   /*position: fixed;*/
   bottom: 0;
@@ -103,6 +114,7 @@ h1 {
   border-radius: 10px;
   background: #e0e0e0;
 }
+
 .tarjetas {
   background-color: #3E5C76;
 }
