--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@ h1 {
 }
 
 .cuerpoHome {
-  margin-left: 130px;
+  margin-left: 170px;
 }
 
 .footerHome{
@@ -110,6 +110,15 @@ h1 {
   width: 100%;
   height: 60px;
   background-color: rgba(219, 63, 48);
+}
+
+.boton2{
+  color: rgb(29, 65, 68);
+  text-decoration: none;
+}
+
+.boton1{
+  background: rgb(187, 142, 230);
 }
 
 .tarjeta {
